<resources>
    <string name="app_name">Кошки-мышки</string>
    <string name="play">Начать играть</string>
    <string name="settings">Настройки</string>
    <string name="levels">Уровни</string>
    <string name="records">Таблица рекордов</string>
    <string name="back">Назад</string>
    <string name="no_level">Уровень не выбран</string>
    <string name="background_music">Фоновая музыка</string>
    <string name="sound_effects">Звуковые эффекты</string>
    <string name="player_name">Имя игрока</string>
    <string name="player">Игрок</string>
    <string name="local_records">Локальные рекорды</string>
    <string name="pull_top5">Загрузить топ-5 мировых</string>
    <string name="top5">Мировые рекорды (топ-5)</string>
    <string name="choose_level">Выберите уровень</string>
    <string name="play_again">Играть снова</string>
    <string name="exit">Выйти</string>
    <string name="score">Счёт</string>
    <string name="you_lose">Вы проиграли :(</string>
    <string name="enter_nickname">Пожалуйста, введите ник в настройках!</string>
    <string name="easy">Легкий</string>
    <string name="medium">Средний</string>
    <string name="hard">Сложный</string>
    <string name="level1">Уровень 1</string>
    <string name="level2">Уровень 2</string>
    <string name="level3">Уровень 3</string>
    <string name="not_empty_nickname">Ник не может быть пустым!</string>
    <string name="chosen">Выбран</string>
</resources>