<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/settings"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/selectedLevelText"
        style="@style/LeaderboardItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/no_level" />

    <Switch
        android:id="@+id/musicSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/background_music"
        android:textColor="@color/textPrimary"
        android:thumbTint="@color/accent"
        android:trackTint="@color/primary"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/soundEffectsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sound_effects"
        android:textColor="@color/textPrimary"
        android:thumbTint="@color/accent"
        android:trackTint="@color/primary"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/playerNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary"
        android:hint="@string/player_name"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary" />

    <Button
        android:id="@+id/backButton"
        style="@style/BackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />
</LinearLayout>